--- a/app/src/main/res/layout/activity_main9.xml
+++ b/app/src/main/res/layout/activity_main9.xml
@@ -6,16 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity9"
     android:background="@drawable/background27">
-    <ImageView
-        android:id="@+id/header"
+    <TextView
+        android:id="@+id/text_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/titel16"
-        android:transitionName="7_1"/>
+        android:layout_marginTop="75dp"
+        android:layout_marginLeft="15dp"
+        android:text="D"
+        android:textSize="90dp"
+        android:transitionName="7_1"
+        android:textColor="@color/wit"/>
+
+    <TextView
+        android:id="@+id/text_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="rink"
+        android:textColor="@color/wit"
+        android:textSize="45dp"
+        android:transitionName="7_2"
+        app:layout_constraintBottom_toBottomOf="@id/text_1"
+        app:layout_constraintStart_toEndOf="@id/text_1" />
 
     <ImageView
         android:id="@+id/dashboard"
@@ -25,6 +39,19 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="75dp"
         android:layout_marginRight="15dp"
-        android:src="@drawable/dashboard_icon_1"
-        android:transitionName="7_2"/>
+        android:src="@drawable/circle"
+        android:transitionName="7_3"/>
+
+    <TextView
+        android:id="@+id/dashboard_word"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/dashboard"
+        app:layout_constraintEnd_toEndOf="@id/dashboard"
+        app:layout_constraintTop_toTopOf="@id/dashboard"
+        app:layout_constraintBottom_toBottomOf="@id/dashboard"
+        android:text="dashboard"
+        android:textColor="@color/wit"
+        android:textSize="20dp"
+        android:transitionName="7_4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
