dashboard heeft nieuwe layout, de letters zijn wel wit // ik denk dat dit het nog mooi maakt

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -55,6 +55,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_1_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_1_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_1_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="HOME"
         android:textColor="@color/wit"
         android:textSize="25dp"
@@ -92,6 +93,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_2_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_2_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_2_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="ADD"
         android:textColor="@color/wit"
         android:textSize="25dp"
@@ -131,6 +133,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_3_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_3_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_3_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="TODAY"
         android:textColor="@color/wit"
         android:textSize="25dp"
@@ -156,6 +159,7 @@
         app:layout_constraintBottom_toBottomOf="@id/rectangle_4_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_4_page_2"
         app:layout_constraintEnd_toEndOf="@id/rectangle_4_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="W"
         android:textSize="90dp"
         android:transitionName="1_8.1"
@@ -169,6 +173,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_4_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_4_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_4_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="WEIGHT"
         android:textColor="@color/wit"
         android:textSize="25dp"
@@ -194,6 +199,7 @@
         app:layout_constraintBottom_toBottomOf="@id/rectangle_5_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_5_page_2"
         app:layout_constraintEnd_toEndOf="@id/rectangle_5_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="D"
         android:textSize="90dp"
         android:transitionName="1_10.1"
@@ -207,10 +213,12 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_5_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_5_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_5_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="DRINK"
         android:textColor="@color/wit"
         android:textSize="25dp"
         android:transitionName="1_11"/>
+
     <ImageView
         android:id="@+id/rectangle_6_page_2"
         android:layout_width="wrap_content"
@@ -230,6 +238,7 @@
         app:layout_constraintBottom_toBottomOf="@id/rectangle_6_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_6_page_2"
         app:layout_constraintEnd_toEndOf="@id/rectangle_6_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="F"
         android:textSize="90dp"
         android:transitionName="1_12.1"
@@ -243,6 +252,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_6_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_6_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_6_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="FOOD"
         android:textColor="@color/wit"
         android:textSize="25dp"
@@ -267,6 +277,7 @@
         app:layout_constraintBottom_toBottomOf="@id/rectangle_7_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_7_page_2"
         app:layout_constraintEnd_toEndOf="@id/rectangle_7_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="A"
         android:textSize="90dp"
         android:transitionName="1_14.1"
@@ -280,6 +291,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_7_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_7_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_7_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="ACTIVITY"
         android:textColor="@color/wit"
         android:textSize="20dp"
@@ -304,6 +316,7 @@
         app:layout_constraintBottom_toBottomOf="@id/rectangle_8_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_8_page_2"
         app:layout_constraintEnd_toEndOf="@id/rectangle_8_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="S"
         android:textSize="90dp"
         android:transitionName="1_16.1"
@@ -316,6 +329,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_8_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_8_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_8_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="SETTINGS"
         android:textColor="@color/wit"
         android:textSize="20dp"
@@ -338,6 +352,7 @@
         app:layout_constraintBottom_toBottomOf="@id/rectangle_9_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_9_page_2"
         app:layout_constraintEnd_toEndOf="@id/rectangle_9_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="#"
         android:textSize="90dp"
         android:transitionName="1_18.1"
@@ -350,6 +365,7 @@
         app:layout_constraintEnd_toEndOf="@id/rectangle_9_page_2"
         app:layout_constraintStart_toStartOf="@id/rectangle_9_page_2"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_9_page_2"
+        android:fontFamily="@font/roboto_slab"
         android:text="ACCOUNT"
         android:textColor="@color/wit"
         android:textSize="20dp"
