--- a/app/src/main/res/drawable/background_1.xml
+++ b/app/src/main/res/drawable/background_1.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:startColor="#00688B"
+        android:startColor="#286086"
         android:endColor="#00FA9A"
         />
 </shape>
