MainActivity3 EN activity_main3.xml zijn aangepast en er is een nieuwe circle_1.png binnengebracht die de dashboard kleiner maakt

--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity3"
-    android:background="@drawable/background27">
+    android:background="@drawable/background_1">
 
     <TextView
         android:id="@+id/text_1"
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="75dp"
         android:layout_marginLeft="15dp"
+        android:fontFamily="@font/roboto_slab"
         android:text="H"
         android:textSize="90dp"
         android:transitionName="1_1"
@@ -24,7 +25,8 @@
         android:id="@+id/text_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="14dp"
+        android:fontFamily="@font/roboto_slab"
         android:text="ome"
         android:textColor="@color/wit"
         android:textSize="45dp"
@@ -38,9 +40,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="75dp"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/circle"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="25dp"
+        android:src="@drawable/circle_1"
         android:transitionName="1_3"/>
 
     <TextView
@@ -51,9 +53,10 @@
         app:layout_constraintEnd_toEndOf="@id/dashboard"
         app:layout_constraintTop_toTopOf="@id/dashboard"
         app:layout_constraintBottom_toBottomOf="@id/dashboard"
+        android:fontFamily="@font/roboto_slab"
         android:text="dashboard"
         android:textColor="@color/wit"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:transitionName="1_4"/>
 
 
@@ -61,6 +64,7 @@
         android:id="@+id/text_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/roboto_slab"
         android:text="greetings :p"
         android:textColor="@color/wit"
         android:textSize="45dp"
