--- a/app/src/main/res/layout/activity_main10.xml
+++ b/app/src/main/res/layout/activity_main10.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity10"
-    android:background="@drawable/background27">
+    android:background="@drawable/background_1">
 
     <TextView
         android:id="@+id/text_1"
@@ -15,7 +15,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="75dp"
         android:layout_marginLeft="15dp"
-        android:text="D"
+        android:fontFamily="@font/roboto_slab"
+        android:text="A"
         android:textSize="90dp"
         android:transitionName="8_1"
         android:textColor="@color/wit"/>
@@ -24,8 +25,9 @@
         android:id="@+id/text_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="rink"
+        android:layout_marginBottom="14dp"
+        android:fontFamily="@font/roboto_slab"
+        android:text="ccount"
         android:textColor="@color/wit"
         android:textSize="45dp"
         android:transitionName="8_2"
@@ -38,9 +40,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="75dp"
-        android:layout_marginRight="15dp"
-        android:src="@drawable/circle"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="25dp"
+        android:src="@drawable/circle_1"
         android:transitionName="8_3"/>
 
     <TextView
@@ -53,6 +55,6 @@
         app:layout_constraintBottom_toBottomOf="@id/dashboard"
         android:text="dashboard"
         android:textColor="@color/wit"
-        android:textSize="20dp"
+        android:textSize="14dp"
         android:transitionName="8_4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
